# think-alike

./: .env.example  .gitignore  Dockerfile  README.md  design.md  docker-compose-qwen-v100.yaml  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: Cargo.toml
backend/src/: app.rs  auth.rs  clustering.rs  config.rs  db.rs  embedding.rs  error.rs  main.rs  routes.rs  static_files.rs
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.vue
frontend/src/components/: GraphCanvas.vue
frontend/src/lib/: api.ts
frontend/src/router/: index.ts
frontend/src/styles/: main.css
frontend/src/views/: HomePage.vue  KanbanPage.vue
infra/db/: init.sql
scripts/: dev.sh
